--- a/index.html
+++ b/index.html
@@ -165,9 +165,19 @@
   <!-- Contact Form -->
   <section id="contact" class="contact-section">
     <h2>Contact Me</h2>
-    <form name="contact" method="POST" data-netlify="true" class="contact-form">
+
+    <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action=thank-you.html class="contact-form">
+
+      <!-- Hidden anti-bot field -->
+      <input type="hidden" name="form-name" value="contact" />
+      <p hidden>
+        <label>Don’t fill this out: <input name="bot-field" /></label>
+      </p>
+
+
+
       <div class="form-group">
-        <input type="text" id="name" name="name" placeholder="Name" required/>
+        <input type="text" id="name" name="name" placeholder="Name" required />
       </div>
 
       <div class="form-group">
