Trying to fix thank you page.

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   <section id="contact" class="contact-section">
     <h2>Contact Me</h2>
 
-    <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="thank-you.html" class="contact-form">
+    <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thank-you.html" class="contact-form">
 
       <!-- Hidden anti-bot field -->
       <input type="hidden" name="form-name" value="contact" />
