--- a/thank-you.html
+++ b/thank-you.html
@@ -10,7 +10,7 @@
   <section class="contact-section">
     <h2>Thanks for reaching out!</h2>
     <p>I’ll get back to you as soon as I can. In the meantime, feel free to check out my music or follow me on social media.</p>
-    <a href="/" class="cta-button">Back to Home</a>
+    <a href="/" class="cta-button-thanks">Back to Home</a>
   </section>
 </body>
 </html>
