Updated metadata for link previews

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Matt Haggard | Guitar Player</title>
+
+  <!-- Open Graph tags for link previews -->
+  <meta property="og:title" content="Matt Haggard | Guitar Player" />
+  <meta property="og:description"
+    content="Christian, husband, dad, and guitar player. Listen to music, explore gear, and get in touch." />
+  <meta property="og:url" content="https://matthaggardmusic.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://matthaggardmusic.com/assets/hero.jpg" />
+
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -166,7 +175,8 @@
   <section id="contact" class="contact-section">
     <h2>Contact Me</h2>
 
-    <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thank-you.html" class="contact-form">
+    <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thank-you.html"
+      class="contact-form">
 
       <!-- Hidden anti-bot field -->
       <input type="hidden" name="form-name" value="contact" />
